--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
 
 <div id="9th grade">
 <h2>9th grade:</h2>
+    <h3>Classes:</h3>
+    <h4>English:</h4>
+    <h4>Physical Education:</h4>
+    <ul>
+        <li>Exercise & Sport Science I</li>
+        <li>Exercise & Sport Science II</li>
+        <li>Fitness and Activities</li>
+    </ul>
 <h3>Advanced Classes:</h3>
-    <h4>Geometry:</h4>
     <h4>Spanish III:</h4>
-    <h4>Honors English:</h4>
+    <h4>Honors Geometry:</h4>
     <h4>Honors Science:</h4>
     <h4>AP World:</h4>
 <h3>Arts:</h3>
-<h4>Art and Social Change:</h4>
-    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
-    <p> Art and Social Change is an entry-level course covering various aspects of how art influences humanity, art as a communication tool, and finding your voice through the making of art. This class is recommended for both beginner and experienced students. Students will work with both 3D and 2D art materials, study major historical art movements, and participate in a student-driven community capstone project. Emphasis is placed on student expression and voice.</p>
-<h4>Introduction to Video Production:</h4>
-    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
-    <p> Explore the artistic and technical aspects of film and video production. Students will get hands-on experience with filming in HD, digital editing, visual effects and computer graphics. Production projects may include but are not limited to music videos, short films, public service announcements and commercials. This course will provide students with the skills needed to successfully transition to Irish Update and/or Video Production courses.</p>
 <h4>Survey of Visual Arts:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
     <p> Find out what you love to create in the Survey of Visual Arts classes. In this course, students will have the opportunity to sample what the RHS visual arts program offers including: drawing, painting, digital illustration, photography, sculpture, and clay projects. Each unit will last approximately 2 weeks, covering beginning level techniques in each medium. This course is recommended for new and emergent art students, who want to have a basic understanding of what is involved with creating in various media.</p>
+<h4>Intro to Fab Lab:</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
+    <p> This course will be an introduction to the 2D, 3D and CNC controlled machines in the Fab Lab. Using the design process, students will use graphic design and CAD software to bring their ideas into reality using rapid-prototyping technology. With design projects like custom printed t-shirts, designing your own logo/brand and learning to operate/maintain Laser and additive manufacturing systems.</p>
+<h4>Intro to Engineering:</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
+    <p> This course is an introduction to the wide ranging field of engineering. Through projects, students will explore civil, mechanical, electrical and software engineering concepts. Through CAD/CAM and other design tools we explore taking ideas to reality. Bridge building, experimentation with Arduino, drones and robotics are used to explore our autonomous future.</p>
 <h3>Normal Classes:</h3>
 </div>
 
@@ -37,12 +44,26 @@
 
 <div id="10th grade">
 <h2>10th grade:</h2>
+<h3>Arts:</h3>
+<h4>Keyboarding A: Computer Skills for High School Success</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i></p>
+    <p>Students will receive instruction in the touch method, and proper techniques will be emphasized as students develop speed and accuracy at the keyboard. Students will also utilize Microsoft Word to develop skills in formatting business letterhead, memorandums, personal and business letters, outlines, and MLA reports.</p>
 </div>
 
 <br>
 
 <div id="11th grade">
 <h2>11th grade:</h2>
+<h3>Arts:</h3>
+<h4>0229 Personal Finance:</h4>
+    <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
+    <p>The Personal Finance course will equip and empower students to make informed financial decisions in an evolving world, with an intentional focus on each student’s individual experiences, cultures, values, and goals.  The Personal Finance course provides students with six essential financial skills:  Financial Psychology, Earning and Income, Financial Systems, Credit and Debt Management, Risk Management, and Budgeting and Investing.  Successful completion of this course meets the Personal Finance graduation requirement for the Class of 2028 and beyond.</p>
+    <h4>0227 Advanced Personal Finance:</h4>
+    <p><i>Grades: 10, 11, 12. Prerequisite: Personal Finance (0226/0229).</i></p>
+    <p>Advanced Personal Finance equips students with practical financial knowledge and skills essential for the transition from high school to the next phase of their lives. It dives deeper into the units of study from the Personal Finance course, while also covering college and alternative options, college financing tools, budgeting, buying a car, renting and furnishing a living space, and the essentials of home ownership. By understanding financial basics, making informed decisions, and practicing responsible financial management, students will be better prepared to navigate the financial challenges and opportunities they may face as they pursue their post-high school dreams.</p>
+<h4>CIS: Creative Problem Solving:</h4>
+    <p><i>Grades: 11, 12. Prerequisite: The University of MN requires students to have a 3.0 GPA.</i></p>
+    <p>University of Minnesota College in the Schools (CIS) Creative Problem Solving (UMN DES 1111)"  is designed for motivated students who are ready to build upon their creativity.  Creativity is essential for success across disciplines and highly valued by employers.  This dynamic and engaging course is designed specifically for high school students who want to cultivate the skills that will set them apart in any field. In an ever-changing world, the ability to think critically, adapt, and generate innovative solutions is invaluable. By the end of this course, you'll have the creative problem-solving skills to face any situation with confidence and ingenuity. You'll be well-prepared to excel academically, professionally, and personally.  Throughout this course, you will be challenged to move outside your existing comfort zones and recognize the value of exploration.  This course presents creative enhancing techniques known in the design fields through activities, research, projects, and more.  At the center of the course is personal creative work, accomplished both alone and with others.<b> The course curriculum is provided by the College of Design at the University of Minnesota and awards 3 college credit hours upon completion.</b></p>
 </div>
 
 <br>
@@ -50,9 +71,7 @@
 <div id="12th grade">
 <h2>12th grade:</h2>
 <h3>Arts:</h3>
-<h4>Advanced Placement Studio Art: 2D Design A, B, and C:</h4>
-    <p><i>Grades: 11, 12. Prerequisite: Art Teacher Permission and completion of any three levels of an art medium with an 80% or better grade average.</i></p>
-    <p> Students enrolled in AP Studio Art 2D will establish their own studio space in the Art Department and create a portfolio of individual two-dimensional or three-dimensional artworks over the course of three trimesters. Students will work individually with the instructor to design projects that reflect the students' unique skills, voice and interests. This collection of work is then submitted to the AP Board at the end of the school year in place of an exam for possible college credit.<b> Instructor approval, completion of all three levels of an art subject, and an 80% or higher art grade average are the prerequisites for this class.</b></p>
+<h4>Free Period?</h4>
 </div>
 
 </div>
