--- a/index.html
+++ b/index.html
@@ -10,23 +10,32 @@
 <div id="title">
 <h1 style="text-align: center;">high school resume</h1>
 
+(I know this isn't a resume Jack and Otter)
+
+<br>
 <br>
 
 <div id="9th grade">
 <h2>9th grade:</h2>
-    <h3>Classes:</h3>
-    <h4>English:</h4>
-    <h4>Physical Education:</h4>
+<h3>Classes:</h3>
+<h4>English:</h4>
+    <p>English 9 creates the foundation upon which future high school reading, writing, and speaking skills will be built. The course will include experiences in both writing and reading workshops. Students will engage in the writing process to practice and build strong composition skills in mechanics and organization, to increase their command of language and vocabulary, to develop several multi-paragraph essays in a variety of modes, and to learn how to research. Students will also increase their capacity to critically comprehend multiple texts in both fiction and nonfiction through various reading workshops. In addition, students will become more effective communicators by developing skills in both speaking and listening.<b> Summer reading to maintain momentum and broaden perspectives is strongly encouraged.</b></p>
+<h4>Physical Education:</h4>
     <ul>
         <li>Exercise & Sport Science I</li>
         <li>Exercise & Sport Science II</li>
         <li>Fitness and Activities</li>
     </ul>
 <h3>Advanced Classes:</h3>
-    <h4>Spanish III:</h4>
-    <h4>Honors Geometry:</h4>
-    <h4>Honors Science:</h4>
-    <h4>AP World:</h4>
+<h4>Spanish III:</h4>
+    <p>Students will continue to enhance their communicative competency in the Spanish language through a variety of interpersonal, interpretive and presentational target language tasks. Authentic resources and language exercises will be used to develop listening, reading, speaking, and writing skills at the advanced novice level. Students will also increase cultural awareness of Hispanic communities through the exploration of diverse topics including travel, the culinary arts, entertainment, and cultural traditions in the Spanish-speaking world.</p>
+<h4>Honors Geometry:</h4>
+    <p>This course is an in-depth study of the concepts of Geometry in two and three dimensions. Topics include measurement, formulas, coordinate geometry, similarity, logic, proof and trigonometry. Concepts will be studied in the context of applications, concrete demonstrations, and connections to Algebra. Continuation in this course is contingent upon receiving a passing grade the previous trimester.</p>
+<h4>Honors Science:</h4>
+    <p>This course is a laboratory approach to Earth Science including Physical Science and the Nature of Science and Engineering. Units of study will include: The Nature of Science and Engineering, Earth’s Systems and Cycles, Vermillion River Field Study, Earth’s Matter, Earth’s Energy, Plate Tectonics, Earth History, Astronomy and Climate. Human’s impact on Earth’s systems is examined in several units throughout the year. Emphasis will be placed on using the scientific method and the engineering design process and communicating the results through formal laboratory write-ups.</p>
+    <p><b>*Note:</b> As an honors class, students will be required to work independently and in cooperative groups, to complete a significant amount of research, along with studying and reviewing the concepts covered. Most assessments include data analysis and constructed response questions that will help to prepare the student for more advanced science classes and college placement tests such as the ACT and SAT.</p>
+<h4>AP World:</h4>
+    <p>Knowing about your world is vital in understanding the people of the past and present. Advanced Placement World History offers an approach that lets students “do history” by guiding them through the steps a historian would take in analyzing historical events and evidence. Students will engage in field trips, artifact examination, debates, Socratic seminars and simulations. This course offers a global view of history from 1200 to the present that covers civilizations of the Americas, Europe, Asia, Africa, and Oceania. AP World History will fulfill the 11th grade history requirement and will help students succeed on the Advanced Placement exam.</p>
 <h3>Arts:</h3>
 <h4>Survey of Visual Arts:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
@@ -37,7 +46,6 @@
 <h4>Intro to Engineering:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
     <p> This course is an introduction to the wide ranging field of engineering. Through projects, students will explore civil, mechanical, electrical and software engineering concepts. Through CAD/CAM and other design tools we explore taking ideas to reality. Bridge building, experimentation with Arduino, drones and robotics are used to explore our autonomous future.</p>
-<h3>Normal Classes:</h3>
 </div>
 
 <br>
@@ -45,7 +53,7 @@
 <div id="10th grade">
 <h2>10th grade:</h2>
 <h3>Arts:</h3>
-<h4>Keyboarding A: Computer Skills for High School Success</h4>
+<h4>Keyboarding A: Computer Skills for High School Success:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i></p>
     <p>Students will receive instruction in the touch method, and proper techniques will be emphasized as students develop speed and accuracy at the keyboard. Students will also utilize Microsoft Word to develop skills in formatting business letterhead, memorandums, personal and business letters, outlines, and MLA reports.</p>
 </div>
