--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
 <div id="title">
 <h1 style="text-align: center;">high school resume</h1>
 
-(I know this isn't a resume Jack and Otter)
-
 <br>
 <br>
 
 <div id="9th grade">
 <h2>9th grade:</h2>
 <h3>Classes:</h3>
-<h4>English:</h4>
-    <p>English 9 creates the foundation upon which future high school reading, writing, and speaking skills will be built. The course will include experiences in both writing and reading workshops. Students will engage in the writing process to practice and build strong composition skills in mechanics and organization, to increase their command of language and vocabulary, to develop several multi-paragraph essays in a variety of modes, and to learn how to research. Students will also increase their capacity to critically comprehend multiple texts in both fiction and nonfiction through various reading workshops. In addition, students will become more effective communicators by developing skills in both speaking and listening.<b> Summer reading to maintain momentum and broaden perspectives is strongly encouraged.</b></p>
 <h4>Physical Education:</h4>
     <ul>
         <li>Exercise & Sport Science I</li>
@@ -28,24 +24,30 @@
     </ul>
 <h3>Advanced Classes:</h3>
 <h4>Spanish III:</h4>
-    <p>Students will continue to enhance their communicative competency in the Spanish language through a variety of interpersonal, interpretive and presentational target language tasks. Authentic resources and language exercises will be used to develop listening, reading, speaking, and writing skills at the advanced novice level. Students will also increase cultural awareness of Hispanic communities through the exploration of diverse topics including travel, the culinary arts, entertainment, and cultural traditions in the Spanish-speaking world.</p>
+    <p> Students will continue to enhance their communicative competency in the Spanish language through a variety of interpersonal, interpretive and presentational target language tasks. Authentic resources and language exercises will be used to develop listening, reading, speaking, and writing skills at the advanced novice level. Students will also increase cultural awareness of Hispanic communities through the exploration of diverse topics including travel, the culinary arts, entertainment, and cultural traditions in the Spanish-speaking world.</p>
 <h4>Honors Geometry:</h4>
-    <p>This course is an in-depth study of the concepts of Geometry in two and three dimensions. Topics include measurement, formulas, coordinate geometry, similarity, logic, proof and trigonometry. Concepts will be studied in the context of applications, concrete demonstrations, and connections to Algebra. Continuation in this course is contingent upon receiving a passing grade the previous trimester.</p>
+    <p> This course is an in-depth study of the concepts of Geometry in two and three dimensions. Topics include measurement, formulas, coordinate geometry, similarity, logic, proof and trigonometry. Concepts will be studied in the context of applications, concrete demonstrations, and connections to Algebra. Continuation in this course is contingent upon receiving a passing grade the previous trimester.</p>
+<h4>Honors English:</h4>
+    <p> English 9 creates the foundation upon which future high school reading, writing, and speaking skills will be built. The course will include experiences in both writing and reading workshops. Students will engage in the writing process to practice and build strong composition skills in mechanics and organization, to increase their command of language and vocabulary, to develop several multi-paragraph essays in a variety of modes, and to learn how to research. Students will also increase their capacity to critically comprehend multiple texts in both fiction and nonfiction through various reading workshops. In addition, students will become more effective communicators by developing skills in both speaking and listening. Honors English 9 addresses the same standards as English 9 at an accelerated rate with expanded literary, writing and speaking experiences.  This course provides the foundation for continued honors-level offerings that highly motivated students may choose in the future, including Honors Literature 10, Advanced Placement Language and Composition (11) and Advanced Placement Literature and Composition (12).  <b> Summer reading to maintain momentum and broaden perspectives is strongly encouraged.</b></p>
 <h4>Honors Science:</h4>
-    <p>This course is a laboratory approach to Earth Science including Physical Science and the Nature of Science and Engineering. Units of study will include: The Nature of Science and Engineering, Earth’s Systems and Cycles, Vermillion River Field Study, Earth’s Matter, Earth’s Energy, Plate Tectonics, Earth History, Astronomy and Climate. Human’s impact on Earth’s systems is examined in several units throughout the year. Emphasis will be placed on using the scientific method and the engineering design process and communicating the results through formal laboratory write-ups.</p>
+    <p> This course is a laboratory approach to Earth Science including Physical Science and the Nature of Science and Engineering. Units of study will include: The Nature of Science and Engineering, Earth’s Systems and Cycles, Vermillion River Field Study, Earth’s Matter, Earth’s Energy, Plate Tectonics, Earth History, Astronomy and Climate. Human’s impact on Earth’s systems is examined in several units throughout the year. Emphasis will be placed on using the scientific method and the engineering design process and communicating the results through formal laboratory write-ups.</p>
     <p><b>*Note:</b> As an honors class, students will be required to work independently and in cooperative groups, to complete a significant amount of research, along with studying and reviewing the concepts covered. Most assessments include data analysis and constructed response questions that will help to prepare the student for more advanced science classes and college placement tests such as the ACT and SAT.</p>
 <h4>AP World:</h4>
-    <p>Knowing about your world is vital in understanding the people of the past and present. Advanced Placement World History offers an approach that lets students “do history” by guiding them through the steps a historian would take in analyzing historical events and evidence. Students will engage in field trips, artifact examination, debates, Socratic seminars and simulations. This course offers a global view of history from 1200 to the present that covers civilizations of the Americas, Europe, Asia, Africa, and Oceania. AP World History will fulfill the 11th grade history requirement and will help students succeed on the Advanced Placement exam.</p>
+    <p> Knowing about your world is vital in understanding the people of the past and present. Advanced Placement World History offers an approach that lets students “do history” by guiding them through the steps a historian would take in analyzing historical events and evidence. Students will engage in field trips, artifact examination, debates, Socratic seminars and simulations. This course offers a global view of history from 1200 to the present that covers civilizations of the Americas, Europe, Asia, Africa, and Oceania. AP World History will fulfill the 11th grade history requirement and will help students succeed on the Advanced Placement exam.</p>
 <h3>Arts:</h3>
-<h4>Survey of Visual Arts:</h4>
+<h4>0102 Survey of Visual Arts:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
     <p> Find out what you love to create in the Survey of Visual Arts classes. In this course, students will have the opportunity to sample what the RHS visual arts program offers including: drawing, painting, digital illustration, photography, sculpture, and clay projects. Each unit will last approximately 2 weeks, covering beginning level techniques in each medium. This course is recommended for new and emergent art students, who want to have a basic understanding of what is involved with creating in various media.</p>
-<h4>Intro to Fab Lab:</h4>
+<h4>0617 Computer Programming I:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
-    <p> This course will be an introduction to the 2D, 3D and CNC controlled machines in the Fab Lab. Using the design process, students will use graphic design and CAD software to bring their ideas into reality using rapid-prototyping technology. With design projects like custom printed t-shirts, designing your own logo/brand and learning to operate/maintain Laser and additive manufacturing systems.</p>
-<h4>Intro to Engineering:</h4>
-    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
-    <p> This course is an introduction to the wide ranging field of engineering. Through projects, students will explore civil, mechanical, electrical and software engineering concepts. Through CAD/CAM and other design tools we explore taking ideas to reality. Bridge building, experimentation with Arduino, drones and robotics are used to explore our autonomous future.</p>
+        <p>Learn how to use Python language for programming the computer.  Become familiar with displaying information on the screen, using variables, functions, designing loops and booleans.  The online platform, Code High School, will be used as the foundation of the course.</p>
+        <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+        <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
+        <h4>0618 Computer Programming II:</h4>
+        <p><i>Grades: 9, 10, 11, 12. Prerequisite: Computer Programming I with minimum grade of “C” or Instructor Permission.</i>
+            <p>Deepen your skill in solving complex problems using Python.  Learn about lists, arrays, nested loops, string manipulation, sorts, searches, subroutines, and I/O operations.  Please register for this course during the same academic year as Computing Programming I.</p>
+            <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+            <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
 </div>
 
 <br>
@@ -53,9 +55,10 @@
 <div id="10th grade">
 <h2>10th grade:</h2>
 <h3>Arts:</h3>
-<h4>Keyboarding A: Computer Skills for High School Success:</h4>
-    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i></p>
-    <p>Students will receive instruction in the touch method, and proper techniques will be emphasized as students develop speed and accuracy at the keyboard. Students will also utilize Microsoft Word to develop skills in formatting business letterhead, memorandums, personal and business letters, outlines, and MLA reports.</p>
+<h4>Independent Living: LIFE 101:</h4>
+    <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
+    <p> This fast-paced course explores the demanding life of the adult world and the realities of living on your own. Students will learn how to find an apartment and successfully share space with a roommate. Using their math skills, students will learn how to man- age their personal finances including budgeting, banking, personal loans and the wise use of credit. A highlight of the class is a car buying project.
+    </p>
 </div>
 
 <br>
@@ -63,15 +66,12 @@
 <div id="11th grade">
 <h2>11th grade:</h2>
 <h3>Arts:</h3>
-<h4>0229 Personal Finance:</h4>
+<h4>0622, 0623, 0624 Advanced Placement Computer Science Principles A, B, C:</h4>
     <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
-    <p>The Personal Finance course will equip and empower students to make informed financial decisions in an evolving world, with an intentional focus on each student’s individual experiences, cultures, values, and goals.  The Personal Finance course provides students with six essential financial skills:  Financial Psychology, Earning and Income, Financial Systems, Credit and Debt Management, Risk Management, and Budgeting and Investing.  Successful completion of this course meets the Personal Finance graduation requirement for the Class of 2028 and beyond.</p>
-    <h4>0227 Advanced Personal Finance:</h4>
-    <p><i>Grades: 10, 11, 12. Prerequisite: Personal Finance (0226/0229).</i></p>
-    <p>Advanced Personal Finance equips students with practical financial knowledge and skills essential for the transition from high school to the next phase of their lives. It dives deeper into the units of study from the Personal Finance course, while also covering college and alternative options, college financing tools, budgeting, buying a car, renting and furnishing a living space, and the essentials of home ownership. By understanding financial basics, making informed decisions, and practicing responsible financial management, students will be better prepared to navigate the financial challenges and opportunities they may face as they pursue their post-high school dreams.</p>
-<h4>CIS: Creative Problem Solving:</h4>
-    <p><i>Grades: 11, 12. Prerequisite: The University of MN requires students to have a 3.0 GPA.</i></p>
-    <p>University of Minnesota College in the Schools (CIS) Creative Problem Solving (UMN DES 1111)"  is designed for motivated students who are ready to build upon their creativity.  Creativity is essential for success across disciplines and highly valued by employers.  This dynamic and engaging course is designed specifically for high school students who want to cultivate the skills that will set them apart in any field. In an ever-changing world, the ability to think critically, adapt, and generate innovative solutions is invaluable. By the end of this course, you'll have the creative problem-solving skills to face any situation with confidence and ingenuity. You'll be well-prepared to excel academically, professionally, and personally.  Throughout this course, you will be challenged to move outside your existing comfort zones and recognize the value of exploration.  This course presents creative enhancing techniques known in the design fields through activities, research, projects, and more.  At the center of the course is personal creative work, accomplished both alone and with others.<b> The course curriculum is provided by the College of Design at the University of Minnesota and awards 3 college credit hours upon completion.</b></p>
+    <p>In addition to a focus on learning how to program, this year-long AP Computer Science Principles course is also designed to help all students widen the scope of computer science through an exploration of the creative aspects as well as understanding the intellectual and everyday contributions that computing offers.  The AP Computer Science Principles Assessment in May consists of two parts: a through-course portfolio submission/assessment  and an end-of-course AP exam. While the course is open to all 10th-12th grade students who are interested in the growing world of computing including  programming and beyond, it may be best taken during the 11th grade year to help prepare for AP Computer Science during senior year.</p>
+    <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+    <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
+    <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
 </div>
 
 <br>
@@ -79,10 +79,17 @@
 <div id="12th grade">
 <h2>12th grade:</h2>
 <h3>Arts:</h3>
-<h4>Free Period?</h4>
+<h4>0646, 0647, 0648, Advanced Placement Computer Science A, B, C:</h4>
+    <p><i>Grades: 10, 11, 12. Prerequisite: Honors Geometry with grade of “A" or Algebra II.</i></p>
+    <p>This course is an in-depth study of the Java Programming language which provides a solid foundation for computer-related careers: computer programming, mathematics, engineering, business, and the natural sciences.  Emphasis will be on gaining knowledge of computer systems--variables, expressions, input-output, conditionals, loops, object-oriented programming, classes and simple recursion.  Major topics will include searching, sorting, data structures, and strings.  This course will help prepare students for the AP Computer Science A exam offered each May.</p>
+    <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+    <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
+    <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
 </div>
 
 </div>
 
 </body>
 </html>
+
+<link rel="stylesheet" href="mystyle.css">
