--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>high school resume</title>
+<link rel="shortcut icon" sizes="16x16 32x32 64x64" href="/irish.ico" type="image/x-icon" />
+<link rel="icon" href="tips.ico" type="image/x-icon" />
+<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 </head>
 <body>
 
 <div id="title">
 <h1 style="text-align: center;">high school resume</h1>
+</div>
 
 <br>
 <br>
