--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p><b>*Note:</b> As an honors class, students will be required to work independently and in cooperative groups, to complete a significant amount of research, along with studying and reviewing the concepts covered. Most assessments include data analysis and constructed response questions that will help to prepare the student for more advanced science classes and college placement tests such as the ACT and SAT.</p>
 <h4>AP World:</h4>
     <p> Knowing about your world is vital in understanding the people of the past and present. Advanced Placement World History offers an approach that lets students “do history” by guiding them through the steps a historian would take in analyzing historical events and evidence. Students will engage in field trips, artifact examination, debates, Socratic seminars and simulations. This course offers a global view of history from 1200 to the present that covers civilizations of the Americas, Europe, Asia, Africa, and Oceania. AP World History will fulfill the 11th grade history requirement and will help students succeed on the Advanced Placement exam.</p>
-<h3>Arts:</h3>
+<h3>Electives:</h3>
 <h4>0102 Survey of Visual Arts:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
     <p> Find out what you love to create in the Survey of Visual Arts classes. In this course, students will have the opportunity to sample what the RHS visual arts program offers including: drawing, painting, digital illustration, photography, sculpture, and clay projects. Each unit will last approximately 2 weeks, covering beginning level techniques in each medium. This course is recommended for new and emergent art students, who want to have a basic understanding of what is involved with creating in various media.</p>
@@ -58,19 +58,21 @@
 
 <div id="10th grade">
 <h2>10th grade:</h2>
-<h3>Arts:</h3>
-<h4>Independent Living: LIFE 101:</h4>
+<h3>Electives:</h3>
+<h4>0657, 0658, 0659, Web Design and Development A, B, C:</h4>
     <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
-    <p> This fast-paced course explores the demanding life of the adult world and the realities of living on your own. Students will learn how to find an apartment and successfully share space with a roommate. Using their math skills, students will learn how to man- age their personal finances including budgeting, banking, personal loans and the wise use of credit. A highlight of the class is a car buying project.
-    </p>
+    <p> In a fast-growing technological world, getting students ready for life after high school is ever-changing. More careers than ever have a need for programming knowledge. This year-long course will teach students the fundamentals of web development in a project-based learning environment. Students will be taught the basic elements of web development, such as web hosting, creating HTML/CSS files, and incorporating Javascript into HTML files. This course will introduce students to the HTML language; a computer language widely used in the programming world.</p>
+    <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+    <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
+    <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
 </div>
 
 <br>
 
 <div id="11th grade">
 <h2>11th grade:</h2>
-<h3>Arts:</h3>
-<h4>0622, 0623, 0624 Advanced Placement Computer Science Principles A, B, C:</h4>
+<h3>Electives:</h3>
+<h4>0622, 0623, 0624, Advanced Placement Computer Science Principles A, B, C:</h4>
     <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
     <p>In addition to a focus on learning how to program, this year-long AP Computer Science Principles course is also designed to help all students widen the scope of computer science through an exploration of the creative aspects as well as understanding the intellectual and everyday contributions that computing offers.  The AP Computer Science Principles Assessment in May consists of two parts: a through-course portfolio submission/assessment  and an end-of-course AP exam. While the course is open to all 10th-12th grade students who are interested in the growing world of computing including  programming and beyond, it may be best taken during the 11th grade year to help prepare for AP Computer Science during senior year.</p>
     <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
@@ -82,7 +84,7 @@
 
 <div id="12th grade">
 <h2>12th grade:</h2>
-<h3>Arts:</h3>
+<h3>Electives:</h3>
 <h4>0646, 0647, 0648, Advanced Placement Computer Science A, B, C:</h4>
     <p><i>Grades: 10, 11, 12. Prerequisite: Honors Geometry with grade of “A" or Algebra II.</i></p>
     <p>This course is an in-depth study of the Java Programming language which provides a solid foundation for computer-related careers: computer programming, mathematics, engineering, business, and the natural sciences.  Emphasis will be on gaining knowledge of computer systems--variables, expressions, input-output, conditionals, loops, object-oriented programming, classes and simple recursion.  Major topics will include searching, sorting, data structures, and strings.  This course will help prepare students for the AP Computer Science A exam offered each May.</p>
