--- a/index.html
+++ b/index.html
@@ -26,64 +26,98 @@
         <li>Exercise & Sport Science II</li>
         <li>Fitness and Activities</li>
     </ul>
+
+<br>
+
 <h3>Advanced Classes:</h3>
 <h4>Spanish III:</h4>
     <p> Students will continue to enhance their communicative competency in the Spanish language through a variety of interpersonal, interpretive and presentational target language tasks. Authentic resources and language exercises will be used to develop listening, reading, speaking, and writing skills at the advanced novice level. Students will also increase cultural awareness of Hispanic communities through the exploration of diverse topics including travel, the culinary arts, entertainment, and cultural traditions in the Spanish-speaking world.</p>
+
+<br>
+
 <h4>Honors Geometry:</h4>
     <p> This course is an in-depth study of the concepts of Geometry in two and three dimensions. Topics include measurement, formulas, coordinate geometry, similarity, logic, proof and trigonometry. Concepts will be studied in the context of applications, concrete demonstrations, and connections to Algebra. Continuation in this course is contingent upon receiving a passing grade the previous trimester.</p>
+
+<br>
+
 <h4>Honors English:</h4>
     <p> English 9 creates the foundation upon which future high school reading, writing, and speaking skills will be built. The course will include experiences in both writing and reading workshops. Students will engage in the writing process to practice and build strong composition skills in mechanics and organization, to increase their command of language and vocabulary, to develop several multi-paragraph essays in a variety of modes, and to learn how to research. Students will also increase their capacity to critically comprehend multiple texts in both fiction and nonfiction through various reading workshops. In addition, students will become more effective communicators by developing skills in both speaking and listening. Honors English 9 addresses the same standards as English 9 at an accelerated rate with expanded literary, writing and speaking experiences.  This course provides the foundation for continued honors-level offerings that highly motivated students may choose in the future, including Honors Literature 10, Advanced Placement Language and Composition (11) and Advanced Placement Literature and Composition (12).  <b> Summer reading to maintain momentum and broaden perspectives is strongly encouraged.</b></p>
+
+<br>
+
 <h4>Honors Science:</h4>
     <p> This course is a laboratory approach to Earth Science including Physical Science and the Nature of Science and Engineering. Units of study will include: The Nature of Science and Engineering, Earth’s Systems and Cycles, Vermillion River Field Study, Earth’s Matter, Earth’s Energy, Plate Tectonics, Earth History, Astronomy and Climate. Human’s impact on Earth’s systems is examined in several units throughout the year. Emphasis will be placed on using the scientific method and the engineering design process and communicating the results through formal laboratory write-ups.</p>
     <p><b>*Note:</b> As an honors class, students will be required to work independently and in cooperative groups, to complete a significant amount of research, along with studying and reviewing the concepts covered. Most assessments include data analysis and constructed response questions that will help to prepare the student for more advanced science classes and college placement tests such as the ACT and SAT.</p>
+
+<br>
+
 <h4>AP World:</h4>
     <p> Knowing about your world is vital in understanding the people of the past and present. Advanced Placement World History offers an approach that lets students “do history” by guiding them through the steps a historian would take in analyzing historical events and evidence. Students will engage in field trips, artifact examination, debates, Socratic seminars and simulations. This course offers a global view of history from 1200 to the present that covers civilizations of the Americas, Europe, Asia, Africa, and Oceania. AP World History will fulfill the 11th grade history requirement and will help students succeed on the Advanced Placement exam.</p>
+
+<br>
+
 <h3>Electives:</h3>
 <h4>0102 Survey of Visual Arts:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
     <p> Find out what you love to create in the Survey of Visual Arts classes. In this course, students will have the opportunity to sample what the RHS visual arts program offers including: drawing, painting, digital illustration, photography, sculpture, and clay projects. Each unit will last approximately 2 weeks, covering beginning level techniques in each medium. This course is recommended for new and emergent art students, who want to have a basic understanding of what is involved with creating in various media.</p>
+
+<br>
+
+<h4>0136 Drawing I:</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
+    <p>Students will explore techniques and materials of observational, mechanical, and imaginative drawings. Materials that will be used are graphite pencils, pastels, charcoal, ink, markers, and color pencils. Students will learn methods and exercises to enhance their drawing skills.</p>
+
+<br>
+
+    <h4>0142 Drawing II:</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: Drawing I.</i>
+    <p>This level II advanced course is an extension of Drawing I. Students will independently explore advanced techniques and materials of abstract, representational, observational, imaginative, and mechanical drawing. Materials used include graphite, chalk, oil pastels, charcoal, ink, alcohol-based markers, colored pencils, and scratchboard. Essential learning includes: measurement for correct proportion, drawing the human face and figure, gesture and contour drawing, one and two-point perspective, architectural rendering, and creating animals with textures using scratchboard techniques. Emphasis will be placed on development of a personal drawing style, and the context of a student’s artistic voice. </p>
+</div>
+
+<br>
+<br>
+
+<div id="10th grade">
+<h2>10th grade:</h2>
+<h3>Classes:</h3>
+<h4>Physical Education:</h4>
+        <ul>
+            <li>Safety Education</li>
+            <li>0840 Self Defense</li>
+            <li>0826 Wellness</li>
+    </ul>
+
+<br>
+
+<h3>Electives:</h3>
+<h4>0616 Intro to Computers:</h4>
+    <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
+    <p>Learn the history, structure, language, applications, and programming of computers.  Gain new skills in using word processors, spreadsheets, binary and RGB, programming in Javascript, as well as computer hardware and software.</p>
+    <p><b>*Note: </b>This course is a math elective and does not qualify as one of the math credits required for graduation. 
+    <p><b>*Note: </b>This course is not an NCAA core academic class.</p>
+
+<br>
+
 <h4>0617 Computer Programming I:</h4>
     <p><i>Grades: 9, 10, 11, 12. Prerequisite: None.</i>
         <p>Learn how to use Python language for programming the computer.  Become familiar with displaying information on the screen, using variables, functions, designing loops and booleans.  The online platform, Code High School, will be used as the foundation of the course.</p>
         <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
         <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
-        <h4>0618 Computer Programming II:</h4>
-        <p><i>Grades: 9, 10, 11, 12. Prerequisite: Computer Programming I with minimum grade of “C” or Instructor Permission.</i>
-            <p>Deepen your skill in solving complex problems using Python.  Learn about lists, arrays, nested loops, string manipulation, sorts, searches, subroutines, and I/O operations.  Please register for this course during the same academic year as Computing Programming I.</p>
-            <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
-            <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
-</div>
 
 <br>
 
-<div id="10th grade">
-<h2>10th grade:</h2>
-<h3>Electives:</h3>
-<h4>0657, 0658, 0659, Web Design and Development A, B, C:</h4>
-    <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
-    <p> In a fast-growing technological world, getting students ready for life after high school is ever-changing. More careers than ever have a need for programming knowledge. This year-long course will teach students the fundamentals of web development in a project-based learning environment. Students will be taught the basic elements of web development, such as web hosting, creating HTML/CSS files, and incorporating Javascript into HTML files. This course will introduce students to the HTML language; a computer language widely used in the programming world.</p>
-    <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
-    <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
-    <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
+        <h4>0618 Computer Programming II:</h4>
+        <p><i>Grades: 9, 10, 11, 12. Prerequisite: Computer Programming I with minimum grade of “C” or Instructor Permission.</i>
+        <p>Deepen your skill in solving complex problems using Python.  Learn about lists, arrays, nested loops, string manipulation, sorts, searches, subroutines, and I/O operations.  Please register for this course during the same academic year as Computing Programming I.</p>
+        <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
+        <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
 </div>
 
+<br>
 <br>
 
 <div id="11th grade">
 <h2>11th grade:</h2>
-<h3>Electives:</h3>
-<h4>0622, 0623, 0624, Advanced Placement Computer Science Principles A, B, C:</h4>
-    <p><i>Grades: 10, 11, 12. Prerequisite: None.</i></p>
-    <p>In addition to a focus on learning how to program, this year-long AP Computer Science Principles course is also designed to help all students widen the scope of computer science through an exploration of the creative aspects as well as understanding the intellectual and everyday contributions that computing offers.  The AP Computer Science Principles Assessment in May consists of two parts: a through-course portfolio submission/assessment  and an end-of-course AP exam. While the course is open to all 10th-12th grade students who are interested in the growing world of computing including  programming and beyond, it may be best taken during the 11th grade year to help prepare for AP Computer Science during senior year.</p>
-    <p><b>*Note:</b> This course is a math elective and does not qualify as one of the math credits required for graduation.</p>
-    <p><b>*Note:</b> This course is not an NCAA core academic class.</p>
-    <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
-</div>
-
-<br>
-
-<div id="12th grade">
-<h2>12th grade:</h2>
 <h3>Electives:</h3>
 <h4>0646, 0647, 0648, Advanced Placement Computer Science A, B, C:</h4>
     <p><i>Grades: 10, 11, 12. Prerequisite: Honors Geometry with grade of “A" or Algebra II.</i></p>
@@ -93,7 +127,17 @@
     <p><b>*Note:</b> This is a year-long course; students should register for all three courses.</p>
 </div>
 
+<br>
+<br>
+
+<div id="12th grade">
+<h2>12th grade:</h2>
+<h3>Electives:</h3>
+    <p>PSEO Credit??</p>
 </div>
+
+<br>
+<br>
 
 </body>
 </html>
