Feb 12, 2025 at 6:49 PM

--- a/index.html
+++ b/index.html
@@ -139,6 +139,47 @@
 <br>
 <br>
 
+<div id="Ideas">
+<h2>Ideas:</h2>
+<h3>Electives:</h3>
+        <table>
+            <tbody>
+                <tr>
+                    <th>Excellent</th>
+                    <th>Good</th>
+                </tr>
+                <tr>
+                    <td>Writing Project</td>
+                    <td>Sport</td>
+                </tr>
+            </tbody>
+        </table>
+
+<br>
+
+<h3>To-Do's</h3>
+        <ul>
+            <li>Talk to many teachers.</li>
+            <li>Connect with classmates.</li>
+            <li>Don't take too many AP classes. Very time consuming.</li>
+            <li>Don't avoid a part-time job.</li>
+            <li>Apply to many scholarships.</li>
+        </ul>
+
+<br>
+
+<h3>AP Classes:</h3>
+        <ul>
+            <li>AP Human Geography is the easiest AP class.</li>
+            <li>AP Psychology is a good life-skill class.</li>
+        </ul>
+
+</div>
+
+<br>
+<br>
+<br>
+
 </body>
 </html>
 
